
SVN
- Added ability to print more than one track at once
- Cleaned up printing code
- Major code cleanup in measure handling code
- Fixed default suggested name when exporting to PDF on mac OS X

1.1.3
- improved vector implementation, fixing possible problems on 64-bits machines
- improved 'follow playback'
- added warning message when adding too many tracks
- always play note on click
- fixed file name being used over song name when printing tablature
- removed harmless warning on the terminal when loading a midi file saved by aria
- fixed undoing vertical moves in guitar editor
- fixed undoing vertical moves in drum editor
- fixed 'follow playback' menu item not properly checked/unchecked when switching between songs
- improvement 'settings' menu layout
- improved scons towards a real install target
- moved docs inside resources so they're always available
- fixed adding new tracks in manual channel management mode
- correctly handle when there's too many tabs open for all to be visible
- fixed crash in score editor
- fixed 'snap notes to grid' sometimes collapsing notes of duration 0
- code cleanup
- more improvements to scons build system

1.1.2
- Added german translation (thanks to Friedrich Weber!)
- Cleaned up language code, making adding new languages easier and less error-prone
- Fixed files being overwriten even if user chose "no" in the overwrite dialog (when he didn't choose another path right away)
- Fixed song length detection when importing midi files
- Fixed note ordering bug that could potentially have caused songs to be messed up
- Fixed copying and pasting from a song to another when both songs don't use the same beat resolution
- Fixed wxString conversions, fixing problems with exporting song name, copyright and track names
- Key is now correctly loaded from files in keyboard editor too
- Added check next to currently selected key in key pop-up menu
- Somewhat better handling of out-of-range notes in keyboard editor